--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                   <a href="#">See the Gallery</a>
                 </div>
                     <div class="dos">
-                      <img src="./assets/img/got.jpg" class="d-block w-100" alt="..." >
+                      <img src="./assets/img/goto.jpg" class="d-block w-100" alt="..." >
                       <i class="fa-solid fa-images fa-2xl" style="color: #ffffff;"></i>
                       <h3>A GOT's movie is officially in the work</h3>
                     <a href="#">See the Gallery</a>
